--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-networks: {
- front:
- back:
-}
+networks:
+  back: {}
+  front: {}
 services:
   mysql:
     container_name: wordpress_mariadb
@@ -15,7 +14,7 @@ services:
     - 3306:3306
     restart: always
     volumes:
-    - ./data:/var/lib/mysql:rw
+    - /home/hexpirate/test_wordpress/docker-compose-wordpress/data:/var/lib/mysql:rw
   nginx:
     container_name: wordpress_nginx
     image: nginx:latest
@@ -28,9 +27,9 @@ services:
     - 443:443
     restart: always
     volumes:
-    - ./nginx/conf.d:/etc/nginx/conf.d:rw
-    - ./nginx/log:/var/log/nginx:rw
-    - ./html:/var/www/html:rw
+    - /home/hexpirate/test_wordpress/docker-compose-wordpress/nginx/conf.d:/etc/nginx/conf.d:rw
+    - /home/hexpirate/test_wordpress/docker-compose-wordpress/nginx/log:/var/log/nginx:rw
+    - /home/hexpirate/test_wordpress/docker-compose-wordpress/html:/var/www/html:rw
   wordpress:
     container_name: wordpress_php
     environment:
@@ -45,6 +44,6 @@ services:
     - 9000:9000
     restart: always
     volumes:
-    - ./html:/var/www/html:rw
+    - /home/hexpirate/test_wordpress/docker-compose-wordpress/html:/var/www/html:rw
 version: '2.0'
 volumes: {}
