--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,11 +1,37 @@
+upstream php {
+        server php:9000;
+}
+
 server {
+       
+        root /var/www/html;
+        index index.php;
 
-   listen       80;
+        location = /favicon.ico {
+                log_not_found off;
+                access_log off;
+        }
 
-   location / {
+        location = /robots.txt {
+                allow all;
+                log_not_found off;
+                access_log off;
+        }
 
-     proxy_pass http://localhost:9000;
+        location / {
+             
+                try_files $uri $uri/ /index.php?$args;
+        }
 
-   }
+        location ~ \.php$ {
+        
+                include fastcgi.conf;
+                fastcgi_intercept_errors on;
+                fastcgi_pass php;
+        }
 
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+                expires max;
+                log_not_found off;
+        }
 }
