--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,37 +1,24 @@
-upstream php {
-        server php:9000;
-}
-
 server {
-       
-        root /var/www/html;
-        index index.php;
-
-        location = /favicon.ico {
-                log_not_found off;
-                access_log off;
-        }
-
-        location = /robots.txt {
-                allow all;
-                log_not_found off;
-                access_log off;
-        }
-
-        location / {
-             
-                try_files $uri $uri/ /index.php?$args;
-        }
-
-        location ~ \.php$ {
-        
-                include fastcgi.conf;
-                fastcgi_intercept_errors on;
-                fastcgi_pass php;
-        }
-
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-                expires max;
-                log_not_found off;
-        }
+    listen 80;
+    server_name localhost;
+ 
+    root /var/www/html;
+    index index.php;
+ 
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+ 
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
+ 
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
 }
