--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     networks:
       back: null
     ports:
-    - "3306:3306"
+    - 3306:3306
     restart: always
     volumes:
     - ./data:/var/lib/mysql:rw
@@ -23,8 +23,8 @@ services:
     networks:
       front: null
     ports:
-    - "80:80"
-    - "443:443"
+    - 80:80
+    - 443:443
     restart: always
     volumes:
     - ./nginx/conf.d:/etc/nginx/conf.d:rw
@@ -34,14 +34,14 @@ services:
     container_name: wordpress_php
     environment:
       WORDPRESS_DB_PASSWORD: testingpassword
-    image: wordpress:4.9.4
+    image: wordpress:4.9.4-php7.2-fpm
     links:
     - mysql
     networks:
       back: null
       front: null
     ports:
-    - "9000:9000"
+    - 9000:9000
     restart: always
     volumes:
     - ./html:/var/www/html:rw
