--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,5 +1,5 @@
 # don't send the nginx version number in error pages and Server header
-#server_tokens off;
+server_tokens off;
 
 # config to don't allow the browser to render the page inside an frame or iframe
 # and avoid clickjacking http://en.wikipedia.org/wiki/Clickjacking
@@ -16,24 +16,36 @@ add_header X-Frame-Options SAMEORIGIN;
 add_header X-Content-Type-Options nosniff;
 
 # This header enables the Cross-site scripting (XSS) filter built into most recent web browsers.
-# It's usually enabled by default anyway, so the role of this header is to re-enable the filter for 
+# It's usually enabled by default anyway, so the role of this header is to re-enable the filter for
 # this particular website if it was disabled by the user.
 # https://www.owasp.org/index.php/List_of_useful_HTTP_headers
 add_header X-XSS-Protection "1; mode=block";
 
+# In order to achieve the best performance and be able to consume benefits of HTTP2 it is mandatory
+# to use TLS. HSTS is a feature which allows a server to tell clients that they should only use
+# secure protocol (HTTPS) in order to communicate with it. When a (complying) browser receives
+# HSTS header it will not try to contact the server using HTTP for a specified period of time.
+add_header Strict-Transport-Security "max-age=31536000;includeSubDomains" always;
+
+# The browser will always set the referrer header to the origin from which the request was made. This
+# will strip any path information from the referrer information.
+add_header Referrer-Policy "origin";
+
+
 server {
-    listen 80;
-    server_name localhost;
- 
-    root /var/www/html;
-    index index.php;
- 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
- 
-    location / {
-        try_files $uri $uri/ /index.php?$args;
-    }
+   listen 80;
+   listen 443 ssl http2;
+   server_name www.letsfixsecurity.com;
+
+   ssl_protocols TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+   ssl_session_cache   shared:SSL:40m;
+   ssl_session_timeout 4h;
+   ssl_session_tickets on;
+
+   ssl_certificate conf.d/www.letsfixsecurity.com.crt;
+   ssl_certificate_key conf.d/www.letsfixsecurity.com.key;
  
     location ~ \.php$ {
         try_files $uri =404;
