--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -35,7 +35,7 @@ add_header Referrer-Policy "origin";
 server {
    listen 80;
    listen 443 ssl http2;
-   server_name www.letsfixsecurity.com;
+   server_name www.changeme.com;
 
    ssl_protocols TLSv1.1 TLSv1.2;
    ssl_prefer_server_ciphers on;
