--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -31,23 +31,33 @@ add_header Strict-Transport-Security "max-age=31536000;includeSubDomains" always
 # will strip any path information from the referrer information.
 add_header Referrer-Policy "origin";
 
+server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        server_name www.letsfixsecurity.com letsfixsecurity.com;
+        return 301 https://www.letsfixsecurity.com$request_uri;
+}
 
 server {
-   listen 80;
-   listen 443 ssl http2;
-   server_name www.changeme.com;
+        listen 443 ssl http2;
+        server_name www.letsfixsecurity.com letsfixsecurity.com;
 
-   ssl_protocols TLSv1.1 TLSv1.2;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
-   ssl_session_cache   shared:SSL:40m;
-   ssl_session_timeout 4h;
-   ssl_session_tickets on;
+        ssl_protocols TLSv1.1 TLSv1.2; server_name www.letsfixsecurity.com letsfixsecurity.com;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5; root /var/www/html;
+        ssl_session_cache shared:SSL:40m; index index.php;
+        ssl_session_timeout 4h;
+        ssl_session_tickets on;
 
-   ssl_certificate conf.d/www.letsfixsecurity.com.crt;
-   ssl_certificate_key conf.d/www.letsfixsecurity.com.key;
- 
-    location ~ \.php$ {
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
+        ssl_certificate conf.d/letsfixsecurity.com.crt;
+        ssl_certificate_key conf.d/letsfixsecurity.com.key;
+
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
+ location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass wordpress:9000;
