--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -31,33 +31,19 @@ add_header Strict-Transport-Security "max-age=31536000;includeSubDomains" always
 # will strip any path information from the referrer information.
 add_header Referrer-Policy "origin";
 
-server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
-        server_name www.letsfixsecurity.com letsfixsecurity.com;
-        return 301 https://www.letsfixsecurity.com$request_uri;
-}
+# DEFAULT CONFIGURATION
+# This is the initial default setup for when you first spin up the stack. Once you have your 
+# SLL Certificate, switch to the "secure" configuration
 
 server {
-        listen 443 ssl http2;
-        server_name www.letsfixsecurity.com letsfixsecurity.com;
-
-        ssl_protocols TLSv1.1 TLSv1.2; server_name www.letsfixsecurity.com letsfixsecurity.com;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5; root /var/www/html;
-        ssl_session_cache shared:SSL:40m; index index.php;
-        ssl_session_timeout 4h;
-        ssl_session_tickets on;
-
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
-        ssl_certificate conf.d/letsfixsecurity.com.crt;
-        ssl_certificate_key conf.d/letsfixsecurity.com.key;
-
+    listen         80 default_server;
+    listen         [::]:80 default_server;
+    server_name    localhost;
+  
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
- location ~ \.php$ {
+    location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass wordpress:9000;
@@ -67,3 +53,44 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
+
+
+# SECURE CONFIGURATION
+# This is the secure configuration for once the SSL certificate has been obtained
+
+# server {
+#         listen 80 default_server;
+#         listen [::]:80 default_server;
+#         server_name www.example.com example.com;
+#         return 301 https://www.letsfixsecurity.com$request_uri;
+# }
+# 
+# server {
+#         listen 443 ssl http2;
+#         server_name www.example.com example.com;
+# 
+#         ssl_protocols TLSv1.1 TLSv1.2; server_name www.letsfixsecurity.com letsfixsecurity.com;
+#         ssl_prefer_server_ciphers on;
+#         ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5; root /var/www/html;
+#         ssl_session_cache shared:SSL:40m; index index.php;
+#         ssl_session_timeout 4h;
+#         ssl_session_tickets on;
+# 
+#         access_log /var/log/nginx/access.log;
+#         error_log /var/log/nginx/error.log;
+#         ssl_certificate conf.d/example.com.crt;
+#         ssl_certificate_key conf.d/example.com.key;
+# 
+#     location / {
+#         try_files $uri $uri/ /index.php?$args;
+#     }
+#     location ~ \.php$ {
+#         try_files $uri =404;
+#         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+#         fastcgi_pass wordpress:9000;
+#         fastcgi_index index.php;
+#         include fastcgi_params;
+#         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         fastcgi_param PATH_INFO $fastcgi_path_info;
+#     }
+# }
