--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -36,13 +36,19 @@ add_header Referrer-Policy "origin";
 # SLL Certificate, switch to the "secure" configuration
 
 server {
-    listen         80 default_server;
-    listen         [::]:80 default_server;
-    server_name    localhost;
-  
+    listen 80;
+    server_name localhost;
+
+    root /var/www/html;
+    index index.php;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -53,8 +59,6 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
-
-
 # SECURE CONFIGURATION
 # This is the secure configuration for once the SSL certificate has been obtained
 
